added some query functions

--- a/views/managedb.html
+++ b/views/managedb.html
@@ -16,7 +16,7 @@
         	<div class="header">
         		<h1> Welcome to the Management Area </h1>
                 <!--The system must allow a System Administrator to manage (create, view, modify or delete) a list of competences related to a specific task.  
-                The system must allow to manage (create, view, modify or delete) areas, which are composed of factory site (branch offices) and area or department (inside the factory). 
+                The system must allow to manage (create, view, modify or delete) areas, which are composed of factory views (branch offices) and area or department (inside the factory).
                 The system must allow to manage (create, view, modify or delete) a list of materials, to be used during the maintenance activity. 
                 The system must allow to manage (create, view, modify or delete) a list of Maintenance procedures. 
                 For each Maintenance Procedure, the system must allow to assign the specific competencies required to perform the maintenance activity. 
