--- a/views/addskill.html
+++ b/views/addskill.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-    	<title> Update Procedure </title>
+    	<title> Add Skill </title>
     	<meta charset="utf-8"/>
     	<meta name="author" content="Team 5"/>
     	<meta name="description" content="Web application for maintenance activies."/>
@@ -37,40 +37,24 @@
                 </p>
             </div>
             <div class="header" >
-                <h1> Procedures Management </h1>
+                <h1> Skills Management </h1>
             </div> 
             <div class="header">
               <p>
                 <a href="index.html"><img border="0" src="exit.png" width="70" height="70"> </a>
               </p>  
             </div> 
-        </div>    
+        </div>  
         <div class="column" style="text-align: center;">
-            <form method="post" name="updateprocedure" >
+            <form method="post" name="addskill" >
             <fieldset>
-              <legend><h2>Update procedure</h2></legend>
+              <legend><h2>Add skill</h2></legend>
               <p>
-                <label for="current">
-                  Old Procedure Name: <input type="text" name="oldprocedure" required/>
+                <label for="insert">
+                  <textarea></textarea>
                 </label>
               </p>
-              <p>
-                <label for="current">
-                  Old Procedure Description: <textarea></textarea>
-                </label>
-              </p>
-              <p>
-                <label for="current">
-                  New Procedure Name: <input type="text" name="newprocedure" required/>
-                </label>
-              </p>
-              <p>
-                <label for="new">
-                  New Procedure Description: <textarea></textarea>
-                </label>
-              </p>
-              <input type="file" id="myFile" name="filename">
-              <input type="submit" value="Upload SMP">
+            </fieldset>
         </div>
         <div class="footer">
           <h2>Team 5</h2>
