--- a/views/addprocedure.html
+++ b/views/addprocedure.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-    	<title> Update Skill </title>
+    	<title> Add Procedure </title>
     	<meta charset="utf-8"/>
     	<meta name="author" content="Team 5"/>
     	<meta name="description" content="Web application for maintenance activies."/>
@@ -37,28 +37,31 @@
                 </p>
             </div>
             <div class="header" >
-                <h1> Skills Management </h1>
+                <h1> Procedures Management </h1>
             </div> 
             <div class="header">
               <p>
                 <a href="index.html"><img border="0" src="exit.png" width="70" height="70"> </a>
               </p>  
             </div> 
-        </div>  
+        </div>    
         <div class="column" style="text-align: center;">
-            <form method="post" name="addskill" >
+            <form method="post" name="addprocedure" >
             <fieldset>
-              <legend><h2>Update skill</h2></legend>
+              <legend><h2>Add procedure</h2></legend>
               <p>
                 <label for="current">
-                  Old skill: <textarea></textarea>
+                  Procedure Name: <input type="text" name="newprocedure" required/>
                 </label>
               </p>
               <p>
                 <label for="new">
-                  New Skill<textarea></textarea>
+                  Procedure Description: <textarea></textarea>
                 </label>
               </p>
+              <input type="file" id="myFile" name="filename">
+              <input type="submit" value="Upload SMP">
+            </fieldset>
         </div>
         <div class="footer">
           <h2>Team 5</h2>
