--- a/views/addsite.html
+++ b/views/addsite.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-    	<title> Add Procedure </title>
+    	<title> Add Site </title>
     	<meta charset="utf-8"/>
     	<meta name="author" content="Team 5"/>
     	<meta name="description" content="Web application for maintenance activies."/>
@@ -16,16 +16,8 @@
             a:visited{
               color: black;
             }
-            textarea {
-              width: 100%;
-              height: 150px;
-              padding: 12px 20px;
-              box-sizing: border-box;
-              border: 2px solid #ccc;
-              border-radius: 4px;
-              background-color: #f8f8f8;
-              font-size: 16px;
-              resize: none;
+            input{
+              width: 200px;
             }
         </style>    
     </head>
@@ -37,30 +29,37 @@
                 </p>
             </div>
             <div class="header" >
-                <h1> Procedures Management </h1>
+                <h1> Sites Management </h1>
             </div> 
             <div class="header">
               <p>
                 <a href="index.html"><img border="0" src="exit.png" width="70" height="70"> </a>
               </p>  
             </div> 
-        </div>    
+        </div> 
         <div class="column" style="text-align: center;">
-            <form method="post" name="addprocedure" >
+            <form method="post" name="addsite" >
             <fieldset>
-              <legend><h2>Add procedure</h2></legend>
-              <p>
-                <label for="current">
-                  Procedure Name: <input type="text" name="newprocedure" required/>
+              <legend><h2>Add site</h2></legend>
+             <p> 
+                <label for="site">
+                  Site: <input type="text" name="site" required/>
                 </label>
               </p>
-              <p>
-                <label for="new">
-                  Procedure Description: <textarea></textarea>
+              <br>
+              <p> 
+                <label for="factory">
+                  Factory: <input type="text" name="factory" required/>
                 </label>
               </p>
-              <input type="file" id="myFile" name="filename">
-              <input type="submit" value="Upload SMP">
+              <br>
+              <p> 
+                <label for="area">
+                  Area: <input type="text" name="area" required/>
+                </label>
+              </p>
+              <br>
+            </fieldset>
         </div>
         <div class="footer">
           <h2>Team 5</h2>
