--- a/views/materials.html
+++ b/views/materials.html
@@ -35,22 +35,20 @@
         </div> 
       </div> 
       <div class="column" style="text-align: center;">
-        <table>
-          <tr>
-            <th style="text-align: center;"><h3>Materials</h3></th>
-          </tr>
-          <tr>
-            <td>Material one</td>
-          </tr>
-          <tr>
-            <td>Material two</td>
-          </tr>
-          <tr>
-            <td>Material three</td>
-          </tr>
-          <tr>
-            <td>Material four</td>
-          </tr>
+        <table id="materials">
+          <thead>
+            <tr>
+              <th style="text-align: center;"><h3>Materials</h3></th>
+            </tr>
+            <template id="materials-row-template">
+              <tr>
+                <td>{Material}</td>
+              </tr>
+            </template>
+          </thead>
+          <tbody id="materials-rows">
+
+          </tbody>
           <tr>
             <td style="background-color: #7A858C; color: white;"><b><a href="addmaterial.html">+ Add</a></b></td>
           </tr>
@@ -62,5 +60,15 @@
       <div class="footer">
         <h2>Team 5</h2>
       </div>
+    <!-- jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+
+    <!-- Custom JS -->
+    <script type="text/javascript" src="../src/controllers/loader.js"></script>
+
+    <script type="application/javascript">
+      $(document).ready(loadMaterials());
+    </script>
+
     </body>
 </html>
