--- a/src/views/materials.html
+++ b/src/views/materials.html
@@ -64,7 +64,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 
     <!-- Custom JS -->
-    <script type="text/javascript" src="../src/controllers/loader.js"></script>
+    <script type="text/javascript" src="../controllers/loader.js"></script>
 
     <script type="application/javascript">
       $(document).ready(loadMaterials());
