--- a/src/views/selected.html
+++ b/src/views/selected.html
@@ -103,8 +103,10 @@
                     <div id="name">
                         <p>2 - Nusco Carpentry - Electric - 30'</p>
                     </div> 
-                    <input type="button" value="forward" name="forward" style="margin: 10px; width: 100px; 
+                    <input type="button" value="update" onclick="window.location.href='http://localhost/progettose/updateactivity.html';" name="update" style="margin: 10px; width: 100px; 
             height: 50px;"> 
+                    <input type="button" value="forward" name="forward" style="margin: 10px; width: 100px; 
+            height: 50px;">
                 </div>
                 <div class="content">
                     <table class="tab1">
