--- a/src/views/selected.html
+++ b/src/views/selected.html
@@ -179,5 +179,16 @@
         <div class="footer" >
             <h2>Team 5</h2>
         </div>
+
+        <!-- jQuery -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+
+        <!-- Custom JS -->
+        <script type="text/javascript" src="../controllers/loader.js"></script>
+
+        <script type="application/javascript">
+      $(document).ready(loadSelected());
+    </script>
+
     </body>
 </html>
