load Maintenance.php by week fixes

--- a/src/views/plannedactivities.html
+++ b/src/views/plannedactivities.html
@@ -71,7 +71,7 @@
     <script type="text/javascript" src="../controllers/loader.js"></script>
 
     <script type="application/javascript">
-      $(document).ready(loadPlanned());
+      $(document).ready(loadPlanned(23));
     </script>
     </body>
 </html>
