--- a/src/views/procedures.html
+++ b/src/views/procedures.html
@@ -51,6 +51,18 @@
               <tr>
                 <td>Procedure four</td>
               </tr>
+
+              <template id="procedures-row-template">
+                <tr>
+                  <td>{Description}</td>
+                  <td>{ID}</td>
+                </tr>
+              </template>
+              </thead>
+              <tbody id="procedures-rows">
+
+              </tbody>
+
               <tr>
                 <td style="background-color: #7A858C; color: white;"><b><a href="addprocedure.html">+ Add</a></b></td>
               </tr>
@@ -62,5 +74,16 @@
         <div class="footer">
           <h2>Team 5</h2>
         </div>
+
+      <!-- jQuery -->
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+
+      <!-- Custom JS -->
+      <script type="text/javascript" src="../controllers/loader.js"></script>
+
+      <script type="application/javascript">
+      $(document).ready(loadProcedures());
+    </script>
+
     </body>
 </html>
