--- a/src/views/sites.html
+++ b/src/views/sites.html
@@ -66,17 +66,41 @@
                 <td>Factory four</td>
                 <td>Area four</td>
               </tr>
+
+                <template id="sites-row-template">
+                    <tr>
+                        <td>{Branch}</td>
+                        <td>{Department}</td>
+                    </tr>
+                </template>
+                </thead>
+                <tbody id="sites-rows">
+
+                </tbody>
+
               <tr>
                 <td colspan="3" style="background-color: #7A858C; color: white;"><b><a href="addsite.html">+ Add</a></b></td>
               </tr>
               <tr>
                 <td colspan="3" style="background-color: #7A858C; color: white;"><b><a href="updatesite.html">Update</a></b></td>
               </tr>
+
             </table>
         </div> 
 
         <div class="footer">
           <h2>Team 5</h2>
         </div>
+
+        <!-- jQuery -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+
+        <!-- Custom JS -->
+        <script type="text/javascript" src="../controllers/loader.js"></script>
+
+        <script type="application/javascript">
+      $(document).ready(loadSkills());
+    </script>
+
     </body>
 </html>
