--- a/src/views/typology.html
+++ b/src/views/typology.html
@@ -52,6 +52,17 @@
               <tr>
                 <td>Type four</td>
               </tr>
+
+              <template id="typology-row-template">
+                <tr>
+                  <td>{Description}</td>
+                </tr>
+              </template>
+              </thead>
+              <tbody id="typology-rows">
+
+              </tbody>
+
               <tr>
                 <td style="background-color: #7A858C; color: white;"><b><a href="addtypology.html">+ Add</a></b></td>
               </tr>
@@ -62,6 +73,17 @@
         </div>
         <div class="footer">
           <h2>Team 5</h2>
-        </div>  
+        </div>
+
+      <!-- jQuery -->
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+
+      <!-- Custom JS -->
+      <script type="text/javascript" src="../controllers/loader.js"></script>
+
+      <script type="application/javascript">
+      $(document).ready(loadTypology());
+    </script>
+
     </body>
 </html>
