--- a/src/views/materials.html
+++ b/src/views/materials.html
@@ -39,10 +39,14 @@
           <thead>
             <tr>
               <th style="text-align: center;"><h3>Materials</h3></th>
+              <th style="text-align: center;"><h3>Edit</h3></th>
             </tr>
             <template id="materials-row-template">
               <tr>
                 <td>{Material}</td>
+                <td style="text-align:center;">
+                <a href="updatematerial.html" class="btn btn-primary" onclick="passId()">Edit</a>
+                </td>
               </tr>
             </template>
           </thead>
@@ -50,10 +54,10 @@
 
           </tbody>
           <tr>
-            <td style="background-color: #7A858C; color: white;"><b><a href="addmaterial.html">+ Add</a></b></td>
+            <td colspan="2" style="background-color: #7A858C; color: white;"><b><a href="addmaterial.html">+ Add</a></b></td>
           </tr>
           <tr>
-            <td style="background-color: #7A858C; color: white;"><b><a href="updatematerial.html">Update</a></b></td>
+            <td colspan="2" style="background-color: #7A858C; color: white;"><b><a href="updatematerial.html">Update</a></b></td>
           </tr>
         </table>
       </div>  
@@ -68,6 +72,12 @@
 
     <script type="application/javascript">
       $(document).ready(loadMaterials());
+
+      function passId() {
+        $('#materials').find('tr').click( function(){
+          localStorage.setItem("id",$(this).index()+1);
+        });
+      };
     </script>
 
     </body>
