--- a/src/views/sites.html
+++ b/src/views/sites.html
@@ -38,6 +38,7 @@
       </div> 
         <div class="column" style="text-align: center;">
             <table>
+              <thead>
               <tr>
                 <th colspan="3"style="text-align: center;"><h3>Sites</h3></th>
               </tr>
@@ -46,37 +47,17 @@
                 <th style="background-color: #7A858C">Factory</th>
                 <th style="background-color: #7A858C">Area</th>
               </tr>
-              <tr>
-                <td>Site one</td>
-                <td>Factory one</td>
-                <td>Area one</td>
-              </tr>
-              <tr>
-                <td>Site two</td>
-                <td>Factory two</td>
-                <td>Area two</td>
-              </tr>
-              <tr>
-                <td>Site three</td>
-                <td>Factory three</td>
-                <td>Area three</td>
-              </tr>
-              <tr>
-                <td>Site four</td>
-                <td>Factory four</td>
-                <td>Area four</td>
-              </tr>
-
                 <template id="sites-row-template">
                     <tr>
+                        <td>{Id}</td>
                         <td>{Branch}</td>
                         <td>{Department}</td>
                     </tr>
                 </template>
-                </thead>
-                <tbody id="sites-rows">
+              </thead>
+              <tbody id="sites-rows">
 
-                </tbody>
+              </tbody>
 
               <tr>
                 <td colspan="3" style="background-color: #7A858C; color: white;"><b><a href="addsite.html">+ Add</a></b></td>
@@ -99,8 +80,8 @@
         <script type="text/javascript" src="../controllers/loader.js"></script>
 
         <script type="application/javascript">
-      $(document).ready(loadSkills());
-    </script>
+          $(document).ready(loadSites());
+        </script>
 
     </body>
 </html>
