save site and skill work

--- a/src/views/addmaterial.html
+++ b/src/views/addmaterial.html
@@ -41,16 +41,14 @@
             </div> 
         </div>    
         <div class="column" style="text-align: center;">
-          <form method="post" name="addmaterial" onsubmit="addMaterial()">
             <fieldset>
               <legend><h2>Add material</h2></legend>
               <p> 
-                <label for="material">
+                <label for="material-name">
                   Material: <input id=material-name type="text" name="material" required/>
                 </label>
               </p>
             </fieldset>
-          </form>  
         </div>
         <div class="footer">
           <h2>Team 5</h2>
