--- a/src/views/addsite.html
+++ b/src/views/addsite.html
@@ -38,31 +38,32 @@
             </div> 
         </div> 
         <div class="column" style="text-align: center;">
-            <form method="post" name="addsite" >
             <fieldset>
               <legend><h2>Add site</h2></legend>
-             <p> 
-                <label for="site">
-                  Site: <input type="text" name="site" required/>
-                </label>
-              </p>
-              <br>
               <p> 
                 <label for="factory">
-                  Factory: <input type="text" name="factory" required/>
+                  Factory: <input id = factory type="text" name="factory" required/>
                 </label>
               </p>
-              <br>
               <p> 
                 <label for="area">
-                  Area: <input type="text" name="area" required/>
+                  Area: <input id="area" type="text" name="area" required/>
                 </label>
               </p>
-              <br>
+              <p>
+                <button onclick="addSite()">Save</button>
+              </p>
             </fieldset>
         </div>
         <div class="footer">
           <h2>Team 5</h2>
         </div>  
     </body>
+
+    <!-- jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+
+    <!-- Custom JS -->
+    <script type="text/javascript" src="../controllers/saver.js"></script>
+
 </html>
