--- a/src/views/addskill.html
+++ b/src/views/addskill.html
@@ -46,18 +46,27 @@
             </div> 
         </div>  
         <div class="column" style="text-align: center;">
-            <form method="post" name="addskill" >
-            <fieldset>
-              <legend><h2>Add skill</h2></legend>
-              <p>
-                <label for="insert">
-                  <textarea></textarea>
-                </label>
-              </p>
-            </fieldset>
+                <fieldset>
+                    <legend><h2>Add skill</h2></legend>
+                    <p>
+                        <label for="new-skill">
+                            New Skill: <input id = "new-skill" type="text" name="skill" required/>
+                        </label>
+                    </p>
+                    <p>
+                        <button onclick="addSkill()">Save</button>
+                    </p>
+                </fieldset>
         </div>
         <div class="footer">
           <h2>Team 5</h2>
         </div>  
     </body>
+
+    <!-- jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+
+    <!-- Custom JS -->
+    <script type="text/javascript" src="../controllers/saver.js"></script>
+
 </html>
