--- a/src/views/sites.html
+++ b/src/views/sites.html
@@ -37,19 +37,24 @@
         </div> 
       </div> 
         <div class="column" style="text-align: center;">
-            <table>
+            <table id="site">
               <thead>
               <tr>
-                <th colspan="2"style="text-align: center;"><h3>Sites</h3></th>
+                <th colspan="3"style="text-align: center;"><h3>Sites</h3></th>
+
               </tr>
               <tr>
                 <th style="background-color: #7A858C">Factory</th>
                 <th style="background-color: #7A858C">Area</th>
+                <th style="text-align: center; background-color: #7A858C">Edit</th>
               </tr>
                 <template id="sites-row-template">
                     <tr>
                         <td>{Branch}</td>
                         <td>{Department}</td>
+                        <td style="text-align:center;">
+                           <a href="updatesite.html" class="btn btn-primary" onclick="passId()">Edit</a>
+                       </td>
                     </tr>
                 </template>
               </thead>
@@ -58,10 +63,7 @@
               </tbody>
 
               <tr>
-                <td colspan="2" style="background-color: #7A858C; color: white;"><b><a href="addsite.html">+ Add</a></b></td>
-              </tr>
-              <tr>
-                <td colspan="2" style="background-color: #7A858C; color: white;"><b><a href="updatesite.html">Update</a></b></td>
+                <td colspan="3" style="background-color: #7A858C; color: white;"><b><a href="addsite.html">+ Add</a></b></td>
               </tr>
 
             </table>
@@ -79,6 +81,12 @@
 
         <script type="application/javascript">
           $(document).ready(loadSites());
+
+          function passId() {
+        $('#site').find('tr').click( function(){
+          localStorage.setItem("id",$(this).index()+1);
+        });
+      };
         </script>
 
     </body>
