--- a/src/views/skills.html
+++ b/src/views/skills.html
@@ -40,10 +40,14 @@
                 <thead>
                     <tr>
                         <th style="text-align: center;"><h3>Skills</h3></th>
+                        <th style="text-align: center;"><h3>Edit</h3></th>
                     </tr>
                     <template id="skills-row-template">
                         <tr>
                             <td>{Skill}</td>
+                            <td style="text-align:center;">
+                                <a href="updateskill.html" class="btn btn-primary" onclick="passId()">Edit</a>
+                            </td>
                         </tr>
                     </template>
                 </thead>
@@ -51,10 +55,7 @@
 
                 </tbody>
               <tr>
-                <td style="background-color: #7A858C; color: white;"><b><a href="addskill.html">+ Add</a></b></td>
-              </tr>
-              <tr>
-                <td style="background-color: #7A858C; color: white;"><b><a href="updateskill.html">Update</a></b></td>
+                <td colspan="2" style="background-color: #7A858C; color: white;"><b><a href="addskill.html">+ Add</a></b></td>
               </tr>
             </table>
         </div>
@@ -69,6 +70,12 @@
 
     <script type="application/javascript">
       $(document).ready(loadSkills());
+    
+      function passId() {
+        $('#skills').find('tr').click( function(){
+          localStorage.setItem("id",$(this).index()+1);
+        });
+      };
     </script>
 
     </body>
