--- a/src/views/typology.html
+++ b/src/views/typology.html
@@ -36,14 +36,18 @@
         </div> 
       </div>  
       <div class="column" style="text-align: center;">
-            <table>
+            <table id="type">
               <tr>
                 <th style="text-align: center;"><h3>Typologies</h3></th>
+                <th style="text-align: center;"><h3>Edit</h3></th>
               </tr>
 
               <template id="typology-row-template">
                 <tr>
                   <td>{Description}</td>
+                  <td style="text-align:center;">
+                    <a href="updatetypology.html" class="btn btn-primary" onclick="passId()">Edit</a>
+                   </td>
                 </tr>
               </template>
               </thead>
@@ -52,10 +56,7 @@
               </tbody>
 
               <tr>
-                <td style="background-color: #7A858C; color: white;"><b><a href="addtypology.html">+ Add</a></b></td>
-              </tr>
-              <tr>
-                <td style="background-color: #7A858C; color: white;"><b><a href="updatetypology.html">Update</a></b></td>
+                <td colspan="2" style="background-color: #7A858C; color: white;"><b><a href="addtypology.html">+ Add</a></b></td>
               </tr>
             </table>
         </div>
@@ -71,6 +72,12 @@
 
       <script type="application/javascript">
       $(document).ready(loadTypology());
+
+      function passId() {
+        $('#type').find('tr').click( function(){
+          localStorage.setItem("id",$(this).index()+1);
+        });
+      };
     </script>
 
     </body>
