system admin save operations completed

--- a/src/views/addmaterial.html
+++ b/src/views/addmaterial.html
@@ -42,12 +42,15 @@
         </div>    
         <div class="column" style="text-align: center;">
             <fieldset>
-              <legend><h2>Add material</h2></legend>
-              <p> 
-                <label for="material-name">
-                  Material: <input id=material-name type="text" name="material" required/>
-                </label>
-              </p>
+                <legend><h2>Add material</h2></legend>
+                <p>
+                    <label for="new-material">
+                        New Material: <input id = "new-material" type="text" name="material" required/>
+                    </label>
+                </p>
+                <p>
+                    <button onclick="addMaterial()">Save</button>
+                </p>
             </fieldset>
         </div>
         <div class="footer">
