--- a/src/views/addprocedure.html
+++ b/src/views/addprocedure.html
@@ -46,25 +46,29 @@
             </div> 
         </div>    
         <div class="column" style="text-align: center;">
-            <form method="post" name="addprocedure" >
             <fieldset>
               <legend><h2>Add procedure</h2></legend>
               <p>
-                <label for="current">
-                  Procedure Name: <input type="text" name="newprocedure" required/>
+                <label for="new-procedure">
+                  Procedure description:
+                    <textarea id="new-procedure" type="text" name="new-procedure" required/></textarea>
                 </label>
               </p>
+              <!--input type="file" id="myFile" name="filename"-->
+              <!--input type="submit" value="Upload SMP"-->
               <p>
-                <label for="new">
-                  Procedure Description: <textarea></textarea>
-                </label>
+                  <button onclick="addProcedure()">Save</button>
               </p>
-              <input type="file" id="myFile" name="filename">
-              <input type="submit" value="Upload SMP">
             </fieldset>
         </div>
         <div class="footer">
           <h2>Team 5</h2>
         </div>  
     </body>
+    <!-- jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+
+    <!-- Custom JS -->
+    <script type="text/javascript" src="../controllers/saver.js"></script>
+
 </html>
