--- a/src/views/updatematerial.html
+++ b/src/views/updatematerial.html
@@ -43,7 +43,7 @@
                 </label>
               </p>
               <p>
-                <button onclick="updateMaterial(localStorage.getItem('id'), document.getElementById('new-material'))">Update</button>
+                <button onclick="updateMaterial()">Update</button>
               </p>
             </fieldset>
         </div>
@@ -56,6 +56,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 
     <!-- Custom JS -->
-    <script type="text/javascript" src="../controllers/updater.js.js"></script>
+    <script type="text/javascript" src="../controllers/updater.js"></script>
 
 </html>
