--- a/src/views/updateskill.html
+++ b/src/views/updateskill.html
@@ -46,23 +46,27 @@
             </div> 
         </div>  
         <div class="column" style="text-align: center;">
-            <form method="post" name="addskill" >
-            <fieldset>
-              <legend><h2>Update skill</h2></legend>
-              <p>
-                <label for="current">
-                  Old skill: <textarea></textarea>
-                </label>
-              </p>
-              <p>
-                <label for="new">
-                  New Skill<textarea></textarea>
-                </label>
-              </p>
-            </fieldset>
+                <fieldset>
+                    <legend><h2>Update skill</h2></legend>
+                    <p>
+                        <label for="new-skill">
+                            New Skill: <input id = "new-skill" type="text" name="skill" required/>
+                        </label>
+                    </p>
+                    <p>
+                        <button onclick="updateSkill()">Update</button>
+                    </p>
+                </fieldset>
         </div>
         <div class="footer">
           <h2>Team 5</h2>
-        </div>  
+        </div>
+
+        <!-- jQuery -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+
+        <!-- Custom JS -->
+        <script type="text/javascript" src="../controllers/updater.js"></script>
+
     </body>
 </html>
